--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4      0      1.4      1  0.0      normal   No  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "[303 rows x 14 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "[297 rows x 14 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "(297, 14)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,9 +886,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8356\\2350690969.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dataframe['ChestPain'] = dataframe['ChestPain'].astype('category')\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8356\\2350690969.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dataframe['ChestPain'] = dataframe['ChestPain'].cat.codes\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8356\\2350690969.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dataframe['Thal'] = dataframe['Thal'].astype('category')\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8356\\2350690969.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dataframe['Thal'] = dataframe['Thal'].cat.codes\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8356\\2350690969.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dataframe['AHD'] = dataframe['AHD'].astype('category')\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8356\\2350690969.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dataframe['AHD'] = dataframe['AHD'].cat.codes\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1149,7 +1191,7 @@
        "[297 rows x 14 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1359,7 @@
        "4      1  0.0     1  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1385,7 @@
        "Name: AHD, dtype: int8"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,11 +1404,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.74167853, -1.52906121,  0.19776829, ...,  0.62991241,\n",
+       "        -0.72057669, -0.60303463],\n",
+       "       [ 0.60111446, -1.52906121,  2.28092759, ..., -1.01062871,\n",
+       "        -0.72057669, -0.60303463],\n",
+       "       [ 1.60516859, -1.52906121,  2.28092759, ..., -1.01062871,\n",
+       "         1.38777733, -0.60303463],\n",
+       "       ...,\n",
+       "       [ 0.26642974,  0.65399606,  0.19776829, ...,  0.62991241,\n",
+       "         0.33360032,  1.11888352],\n",
+       "       [ 0.48955288,  0.65399606,  2.28092759, ..., -1.01062871,\n",
+       "         1.38777733, -0.60303463],\n",
+       "       [ 1.82829173, -1.52906121,  0.19776829, ..., -1.01062871,\n",
+       "         0.33360032, -0.60303463]])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.07230911, -1.52906121,  1.23934794, -1.12522849, -1.69153882,\n",
+       "        -0.43698372, -1.04980046, -0.4521183 , -0.73413966, -0.91504143,\n",
+       "         0.62991241, -0.72057669, -0.60303463],\n",
+       "       [-0.29137811,  0.65399606, -0.84381136, -1.12522849, -0.35299224,\n",
+       "        -0.43698372, -1.04980046,  0.4968933 , -0.73413966, -0.91504143,\n",
+       "        -1.01062871,  0.33360032, -0.60303463],\n",
+       "       [-0.06825497, -1.52906121,  0.19776829,  0.15260911,  1.06204272,\n",
+       "         2.28841476, -1.04980046,  0.92826221, -0.73413966, -0.91504143,\n",
+       "        -1.01062871, -0.72057669, -0.60303463],\n",
+       "       [ 1.71673016,  0.65399606, -0.84381136, -0.12518167,  1.40624041,\n",
+       "        -0.43698372,  0.96479637, -1.70308815, -0.73413966,  1.2007129 ,\n",
+       "         0.62991241,  2.44195435, -0.60303463],\n",
+       "       [ 0.15486817,  0.65399606,  1.23934794, -0.68076324, -0.23825968,\n",
+       "        -0.43698372, -1.04980046,  1.27335734, -0.73413966, -0.20978999,\n",
+       "        -1.01062871, -0.72057669, -0.60303463]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_scaled[:5]"
    ]
   }
  ],
